
= live_ast Changes

== Version 1.3.2

* Add support for Ruby 2.6

== Version 1.3.1

* Loosen dependency on ruby_parser

== Version 1.3.0

* Drop support for Rubies below 2.3
* Update dependencies

== Version 1.2.0

* Drop support for Rubies below 2.1
* Handle multi-line definitions in IRB correctly
* Tighten and update dependencies

== Version 1.1.3

* Keep ASTs in the cache when they are fetched, allowing aliased methods to
  retrieve their AST under both names.
* Do not destroy the AST when creating ruby source

== Version 1.1.2

* Update dependencies
* Improve test suite:
  - Separate suites for different sets of loaded live_ast features
  - Eliminate test run order dependencies
* Clean up code
* Fix error handling for nil file argument of instance_eval

== Version 1.1.1

* Support Ruby 2.0 and 2.1
* Update RubyParser dependency

== Version 1.1.0

* incorporate default parser in the main gem
* update RubyParser dependency
* use binding_of_caller gem instead of boc

== Version 1.0.2

* handle -unix, -dos, -mac special encoding suffixes

== Version 1.0.1

* add tests for "def self.f" and "def A.f" (plugins were missing this construct)

== Version 1.0.0

* no known bugs; API is settled
* ast_load respects $VERBOSE=true

== Version 0.7.3

* live_ast/full now available for jruby (via boc gem)
* fix instance_eval with BasicObject instance

== Version 0.7.2

* fix old find&replace accident with boc; rubyspec test now enabled by default

== Version 0.7.1

* fix rubygems problem when parser not loaded after live_ast/full

== Version 0.7.0

* eval replacement option now included in the gem
* new 'boc' gem for eval replacement -- no more syntax restrictions
* add require 'live_ast/full' -- shortcut for live_ast + live_ast/replace_eval
* rubyspec conformance for require 'live_ast/full'
* added required_ruby_version to gemspec
* fixed error when IRB is partially required

== Version 0.6.3

* minor change for Ruby 1.9.3

== Version 0.6.2
