@@ -29,7 +29,7 @@ Gem::Specification.new do |spec|
   spec.add_runtime_dependency "ruby2ruby", "~> 2.4.0"
   spec.add_runtime_dependency "ruby_parser", "~> 3.14"
 
-  spec.add_development_dependency "binding_of_caller", "~> 0.8.0"
+  spec.add_development_dependency "bindings", "~> 1.0.0"
   spec.add_development_dependency "minitest", "~> 5.0"
   spec.add_development_dependency "rake", "~> 13.0"
   spec.add_development_dependency "rdoc", "~> 6.2"
