@@ -117,7 +117,7 @@ class ReplaceEvalTest < BaseTest
            require "live_ast/full"
            true
          rescue LoadError
-           raise "need: gem install binding_of_caller" if RUBY_ENGINE == "ruby"
+           raise "need: gem install bindings" if RUBY_ENGINE == "ruby"
 
            false
          end
